Upload the AC version of PPO

--- a/env_test.ipynb
+++ b/env_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,81 +35,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import PPOAC\n",
+    "net = PPOAC.ActorCritic()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_evaders =2\n",
+    "n_pursuers = 1\n",
+    "n_catch =1\n",
+    "max_cycles = 200\n",
+    "env = pursuit_v4.env(n_evaders = n_evaders, n_pursuers = n_pursuers,max_cycles =max_cycles,n_catch=n_catch)\n",
+    "env.reset(seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'PPO' from 'PPOAC' (/home/jackyansongli/zelin/PPO_pursuit/PPOAC.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdesk_arch/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPPOAC\u001b[39;00m \u001b[39mimport\u001b[39;00m ActorCritic\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bdesk_arch/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPPOAC\u001b[39;00m \u001b[39mimport\u001b[39;00m PPO\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'PPO' from 'PPOAC' (/home/jackyansongli/zelin/PPO_pursuit/PPOAC.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from PPOAC import ActorCritic\n",
+    "from PPOAC import PPO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'PPO' from 'PPOAC' (/home/jackyansongli/zelin/PPO_pursuit/PPOAC.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bdesk_arch/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPPOAC\u001b[39;00m \u001b[39mimport\u001b[39;00m PPO\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'PPO' from 'PPOAC' (/home/jackyansongli/zelin/PPO_pursuit/PPOAC.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from PPOAC import PPO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'train' from 'PPOAC' (/home/jackyansongli/zelin/PPO_pursuit/PPOAC.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bdesk_arch/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPPOAC\u001b[39;00m \u001b[39mimport\u001b[39;00m train\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdesk_arch/home/jackyansongli/zelin/PPO_pursuit/env_test.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m PPOAC\u001b[39m.\u001b[39mtrain(env,epochs\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m,steps_per_epoch\u001b[39m=\u001b[39mmax_cycles\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m10\u001b[39m,batch_size\u001b[39m=\u001b[39m\u001b[39m128\u001b[39m,lr\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m,gamma\u001b[39m=\u001b[39m\u001b[39m0.99\u001b[39m,clip_ratio\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'train' from 'PPOAC' (/home/jackyansongli/zelin/PPO_pursuit/PPOAC.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from PPOAC import train\n",
+    "PPOAC.train(env,epochs=5,steps_per_epoch=max_cycles//10,batch_size=128,lr=0.2,gamma=0.99,clip_ratio=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [1., 0., 0.],\n",
-       "        [1., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [1., 0., 0.],\n",
-       "        [1., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [1., 0., 0.],\n",
-       "        [1., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 1., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [1., 0., 0.],\n",
-       "        [1., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [1., 0., 0.],\n",
-       "        [1., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [1., 0., 0.],\n",
-       "        [1., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 1.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [0., 0., 0.],\n",
-       "        [1., 0., 0.],\n",
-       "        [1., 0., 0.]]], dtype=float32)"
+       "(tensor([[0.1997, 0.1997, 0.1998, 0.2007, 0.2001]], grad_fn=<SoftmaxBackward0>),\n",
+       " tensor([[-0.0164]], grad_fn=<AddmmBackward0>))"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "observation"
+    "net(observation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +154,14 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch\n",
-    "torch.cuda.is_available()"
+    "torch.cuda.is_available()\n"
    ]
   },
   {
