--- a/ppo.ipynb
+++ b/ppo.ipynb
@@ -56,6 +56,7 @@
    "outputs": [],
    "source": [
     "\n",
+    "#This is a simple version that do not take critic into consideration\n",
     "class PPO:\n",
     "    def __init__(self,lr, gamma,clip_ratio):\n",
     "        self.policy = Policy()\n",
